# TradingAgents

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  RESEARCH_FINDINGS.md  ROADMAP.md  backtest_memory.md  findings.md  main.py  pilot_results.csv  pyproject.toml  sanity_check.csv  tickers.txt
.claude/commands/: speckit.clarify.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.specify/memory/: constitution.md
.specify/templates/: spec-template-conditional.md  spec-template.md
claudedocs/: SETUP.md  a3-filter-forensics-007.md  amd-2026-04-17-deep-dive-2026-05-07.md  amd-2026-04-24-deep-dive-2026-05-07-evening.md  amd-memory-log-audit-hallucination-resolution-2026-05-07-late.md  amzn-2026-04-17-04-24-deep-dive-2026-05-07-evening.md  avgo-temporal-jump-investigation-2026-05-07.md  backlog-grooming-claudedocs-survey-2026-05-08.md  bear-bigram-artifact-check-2026-05-04.md  bear-sector-symmetry-retrospective-2026-05-06.md  bear-side-mechanism-exploration-2026-05-07.md  bear-side-per-ticker.md  bear-side-survey-recheck-post-spec012-2026-05-09.md  behavioral-additive-cross-cohort-sweep-2026-05-07.md  behavioral-additive-sweep-2026-05-09-refresh.md  behavioral-additive-sweep-post-v1.4.6-ratification-2026-05-07.md  behavioral-additive-sweep-refresh-2026-05-07-evening.md  buffer-fix-comparison-2026-05-05.md  class-c2-short-interest-feasibility-2026-05-07.md  class-c3-analyst-pt-feasibility-2026-05-07.md  class-c4-institutional-ownership-feasibility-2026-05-07.md  class-c5-earnings-feasibility-2026-05-07.md  class-c6-bear-news-density-skip-2026-05-07.md  class4-macro-bull-retrospective-2026-05-09.md  class4-macro-filter-retrospective-2026-05-09.md  class5-bull-rerun-skip-confirmed-2026-05-09.md  class5-surprise-outlier-investigation-2026-05-07.md  constitution-v1.4.4-draft-2026-05-07.md  constitution-v1.4.5-draft-2026-05-07.md  constitution-v1.5.1-conditional-patch-drafts-2026-05-08.md  constitution-v1.5.2-xref-audit-2026-05-09.md  constitution-v1.5.3-conditional-patch-drafts-2026-05-09.md  constitutional-compliance-audit-2026-05-08.md  contrarian-gate-retrospective-2026-05-05.md  contrarian-gate-threshold-sweep-2026-05-06.md  counterfactual-hold-all-uw-2026-05-04.md  cross-pollination-l4-progress-check-2026-05-08.md  cross-pollination-review-2026-05-08.md  daily-signals-2026-05-06.md  daily-signals-2026-05-08.md  (+119 more)
claudedocs/templates/: pilot-landing-pr-series-template.md
cli/: main.py  utils.py
data/watchlists/: tech_weighted.txt
deploy/: Caddyfile.snippet  Containerfile  README.md  deploy.sh
deploy/quadlet/: tradingagents-dashboard.container
deploy/systemd/: tradingagents-engine-adhoc@.service  tradingagents-engine-daily.service  tradingagents-engine-daily.timer  tradingagents-trigger-poller.service
docs/: BOTS_DESIGN.md  EXPERIMENT.md  LIVE_SIGNALS_PRODUCT.md  MULTI_AGENT_DEBATE_RESEARCH.md  PAPER_TRADING.md  PROJECT_STRUCTURE.md  SCAFFOLDING_PLAN.md  SIGNALS.md  SIGNAL_LIFECYCLE.md
experiments/2026-05-02-001-mr1-contradiction/: ANALYSIS.md  HYPOTHESIS.md  aggregate.py  analyze_contradictions.py  extract_debates.py  results.jsonl  run.ps1  run.sh
experiments/2026-05-02-002-wc12-pm-blind/: ANALYSIS.md  HYPOTHESIS.md  results.csv  (+2 more)
scripts/: analyze_backtest.py  analyze_contrarian_gate.py  analyze_sc009_ab.py  backfill_signal_cache.py  backtest.py  bear_sector_symmetry_retrospective.py  bear_side_per_ticker.py  behavioral_additive_sweep.py  bigram_artifact_check.py  br3_squeak_pilot.py  br3_v2_pilot.py  check_rating_distribution.py  class4_macro_bull_retrospective.py  class4_macro_retrospective.py  class4_macro_shadow_audit.py  contrarian_gate_retrospective.py  contrarian_gate_threshold_sweep.py  counterfactual_signal.py  daily_signals.py  dashboard_smoke.sh  degenerate_window_check.py  detect_signal_drift.py  diagnose_uw_quality.py  dual_pilot_monitor.py  evaluate_signals.py  featurizer_artifact_check.py  finding4_mechanism.py  finding4_strict_prior_ic.py  finding4_within_bullish_subset_ic.py  findings_aggregate.py  forecast_shortcut_savings.py  forward_catalyst_class2_retrospective.py  forward_catalyst_class3_retrospective.py  forward_catalyst_class4_retrospective.py  forward_catalyst_class4_vs_spec007_overlap.py  forward_catalyst_class5_reaction_retrospective.py  forward_catalyst_class5_retrospective.py  forward_catalyst_class5_vs_class3_overlap.py  forward_catalyst_class_c1_insider_retrospective.py  forward_catalyst_hybrid_c_bear_retrospective.py  (+34 more)
tests/: conftest.py  test_analyst_agents.py  test_analyst_pt_snapshot.py  test_analyze_sc009_ab.py  test_anthropic_client.py  test_backtest_extensions.py  test_bear_sector_symmetry_filter.py  test_brave_news.py  test_calendar_boost.py  test_calendar_boost_latency.py  test_checkpoint_resume.py  test_class4_macro_shadow_audit.py  test_class_4_pm_integration.py  test_conditional_logic.py  test_contrarian_gate.py  test_contrarian_gate_fallback.py  test_daily_signals.py  test_dashboard_app.py  test_dashboard_state_reader.py  test_data_tool_dispatch.py  test_dataflows_utils.py  test_debate_agents.py  test_engine_callbacks.py  test_engine_cli_state_dir.py  test_engine_contracts.py  test_engine_lock.py  test_engine_runner.py  test_exa_news.py  test_experiments_ids.py  test_experiments_overrides.py  test_experiments_templates.py  test_extended_signals.py  test_findings_aggregate.py  test_forward_catalyst_filter.py  test_forward_catalyst_filter_calendar_boost.py  test_graph_setup.py  test_institutional_rotation_filter.py  test_institutional_rotation_pm_integration.py  test_interface_routing.py  test_llm_factory.py  (+41 more)
tradingagents/: default_config.py
(+381 files in other folders)
