[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-lab"
version = "0.3.0-dev"
description = "Personal experimental fork of TradingAgents — research playground for multi-agent LLM debate dynamics"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Russ Smith", email = "rbsmith4@gmail.com"},
]
keywords = ["llm", "multi-agent", "debate-dynamics", "agent-research", "structured-output"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain-core>=0.3.81",
    "langchain-anthropic>=0.3.15",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "questionary>=2.1.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "stockstats>=0.6.5",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]
# Removed 2026-05-05 (zero references in code; verified by tech-debt audit
# claudedocs/tech-debt-2026-05-05.md): redis, parsel, tqdm, pytz,
# langchain-experimental, setuptools (the build dep stays in [build-system]).

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.urls]
"Upstream" = "https://github.com/TauricResearch/TradingAgents"
"Personal fork" = "https://github.com/quanticsoul4772/TradingAgents"

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "tradingagents_lab.egg-info", "experiments"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function calls in default args (typer pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"scripts/*" = ["E402"]
# cli/main.py: load_dotenv() must run before module imports (E402); cli.utils
# is consumed via star-import as a deliberate re-export (F403/F405).
"cli/main.py" = ["E402", "F403", "F405"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "yfinance",
    "yfinance.*",
    "stockstats",
    "stockstats.*",
    "parsel",
    "parsel.*",
    "questionary",
    "questionary.*",
    "langgraph.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "redis.*",
    "stockstats.*",
]
ignore_missing_imports = true
